Import of RBOW/conference-3.10 from CPAN.
gitpan-cpan-distribution: conference
gitpan-cpan-version:      3.10
gitpan-cpan-path:         RBOW/conference-3.10.tar.gz
gitpan-cpan-author:       RBOW
gitpan-cpan-maturity:     released

--- a/templates/confirm_delete.html
+++ b/templates/confirm_delete.html
@@ -7,12 +7,12 @@
 <p>
 <table border=0>
 <tr><td>
-<form action="%%%script_name%%%" method="post">
+<form action="%%%delete_action%%%" method="post">
 <input type="hidden" name="id" value="%%%id%%%">
 <input type="hidden" name="action" value="Confirm">
 <input type="submit" value="Yes">
 </form></td><td>
-<form action="%%%script_name%%%" method="post">
+<form action="%%%no_delete_action%%%" method="post">
 <input type="hidden" name="id" value="%%%id%%%">
 <input type="hidden" name="action" value="Details">
 <input type="submit" value="No">
